Bug 642800 - Add a script blocker to avoid nested PrepareEditor calls.  r=ehsan